--- a/assets/css/aboutus.css
+++ b/assets/css/aboutus.css
@@ -7,16 +7,12 @@
     flex: 1;
     display: flex;
     margin-top: 100px;
-    padding: 40px;
     background-color: var(--bg-section);
 }
 
 #aboutUs .about-content .abaut-text {
     flex: 1;
-}
-
-#aboutUs .about-content .about-image {
-    flex: 1;
+    padding: 40px;
 }
 
 #aboutUs .abaut-text .title-section {
@@ -29,4 +25,80 @@
     margin-top: 15px;
     margin-bottom: 22px;
     color: var(--color-default);
+}
+
+#aboutUs .abaut-text .about-contador {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 40px;
+}
+
+#aboutUs .abaut-text .about-content-85 {
+    display: flex;
+    align-items: center;
+}
+
+#aboutUs .abaut-text .circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 15px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: var(--color-default);
+}
+
+#aboutUs .abaut-text .cicle-int {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--color-default);
+    font-weight: bold;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    background-color: var(--bg-element-light);
+}
+
+#aboutUs .about-content .about-image {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+}
+
+#aboutUs .about-image .box-10years {
+    width: 150px;
+    height: 160px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: var(--color-white);
+    position: absolute;
+    left: 60px;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: var(--color-default);
+}
+
+#aboutUs .about-image .box-10years .years {
+    font-size: 5rem;
+    font-weight: 600;
+    line-height: 5rem;
+    font-family: 'DM Serif Display', serif;
+}
+
+#aboutUs .about-image .fa-plus {
+    position: absolute;
+    top: 30px;
+    right: 15px;
+    font-size: 1.6rem;
+}
+
+#aboutUs .about-image .box-10years .text-years {
+    text-transform: uppercase;
+    font-weight: 600;
+    line-height: 1.5rem;
 }
