Seção get criada / Corrigindo altura carrossel projects

--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -4,6 +4,7 @@
     --color-black: #000;
     --color-white: #fff;
     --color-text: #5a5a5a;
+    --color-text2: #535353;
     --bg-element-darck: #363636;
     --bg-element-light: #f1f1f1;
     --bg-section: #f4f3ef;
@@ -18,7 +19,7 @@ h1 {
 }
 
 h2 {
-    font-size: 2.5rem;
+    font-size: 2.4rem;
     line-height: 2.8rem;
     color: var(--color-black);
     font-family: 'DM Serif Display', serif;
