arquivi index rebomeado

--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -37,6 +37,12 @@ h4 {
     color: var(--color-default);
 }
 
+h5 {
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: var(--color-default);
+}
+
 p {
    font-size: 1.1rem; 
    font-weight: 500;
