--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -4,6 +4,7 @@
     justify-content: center;
     padding-top: 50px;
     background-image: linear-gradient(45deg, #e0e0e0, #fff);
+    height: 100vh;
 }
 
 #banner .image-headline,
